assets/stylesheets/sass/partials/index.scss
.slick-slider {
  overflow: hidden;
}

h2 {
  font-size: 2.3rem;
  text-align: center;
  margin-bottom: .75rem;
}

h3 {
  margin-bottom: .5rem;
}

h3 + p {
  margin-top: 0;
}

body {
  >div#ss-banner-container {
    display: flex;
    align-items: center;
    position: relative;
    max-height: 60vh;
    overflow: hidden;

    // Remove margin from generated slick-slideshow element
    >div:first-of-type {
      margin-bottom: 0;
    }


    // Banner CTA
    >a {
      position: absolute;
      right: 1rem;
      bottom: 24px;
      padding: .8rem 1rem;
      background: $brand-orange;
      border: 1px solid $dark-gray;
      border-radius: 5px;
      box-shadow: $dark-gray 0px 5px 15px -8px;

      color: $dark-gray;
      font-weight: bold;
      text-decoration: none;
      text-transform: uppercase;

      &:active {
        box-shadow: $dark-gray 0px 0px 0px 0px;
      }
    }
  }

  section {
    border-bottom: 3px solid $dark-gray;
    overflow: hidden;
  }

  >main {
    // Flex column on mobile and flex row for 2 column desktop size
    display: flex;
    flex-direction: column;

    >section#about {
      padding: 3rem 1rem 4rem;
      //background: $brand-orange;

      >h2 {

        >span {
          white-space: nowrap;
        }
      }

      >p {
        text-indent: 1rem;
      }

      >ul {
        margin: 0;
      }
    }

    >section#services {
      padding: 3rem 1rem 4rem;
      background: $brand-orange;

      >div.service-block {
        margin-bottom: 3rem;
      }
    }
  }

  >section#instafeed-section {
    display: flex;
    flex-direction: column;
    padding: 3rem 0 4rem;

    >small {
      text-align: center;

      &:first-of-type:before {
        content: 'Tap';
      }

      &:last-of-type:before {
        content: '<- Swipe ->';
      }
    }

    >div {
      display: flex;
      overflow-x: scroll;

      a {
        margin-right: 1rem;
      }
    }
  }

  section#testimonials {
    padding: 3rem 1rem 4rem;
    background: $brand-orange;

    .testimonial-slider {
      margin: 0;
    }

    blockquote>span {
      position: relative;
      left: 70%;
    }
  }

  section#contact {
    padding: 3rem 1rem 4rem;

    form {

      div.form-group {
        display: flex;
        flex-direction: column;
        margin-bottom: 1.5rem;

        >label {
          text-transform: uppercase;
        }

        >input, >textarea {
          padding: .5rem;
          border: 1px solid $dark-gray;
        }

        >textarea {
          min-height: 150px;
        }

        >button {
          padding: .8rem 1rem;
          background: $brand-orange;
          border: 1px solid $dark-gray;
          border-radius: 5px;
          box-shadow: $dark-gray 0px 5px 15px -8px;

          color: $dark-gray;
          font-weight: bold;
          text-decoration: none;
          text-transform: uppercase;

          &:active {
            box-shadow: $dark-gray 0px 0px 0px 0px;
          }
        }
      }
    }
  }
}

/* Custom, iPhone Retina */
@media only screen and (min-width : 320px) {

}

/* Extra Small Devices, Phones */
@media only screen and (min-width : 480px) {

}

/* Small Devices, Tablets */
@media only screen and (min-width : 768px) {
  //.mobile-only {
  //  display: none;
  //}

  h2 {
    font-size: 2.3rem;
    text-align: center;
    margin-bottom: .75rem;
  }

  h3 {
    margin-bottom: .5rem;
  }

  h3 + p {
    margin-top: 0;
  }

  h2, h3, h4 {
    max-width: 700px;
    margin-left: auto;
    margin-right: auto;
  }

  p {
    max-width: 700px;
    margin-left: auto;
    margin-right: auto;
  }

  body {
    > div#ss-banner-container {

      // Banner CTA
      > a {
        font-size: 2.2rem;
      }
    }

    section {

    }

    > main {

      > section#about {
        > h2 {
          text-align: left;

          > span {

          }
        }

        > p {

        }

        > ul {
          max-width: 700px;
          margin-left: auto;
          margin-right: auto;
        }
      }

      > section#services {
        background: transparentize($brand-orange, 0);

        > h2 + p {

        }

        > div.service-block {

        }
      }
    }

    > section#instafeed-section {

      > small {

        &:before {

        }
      }

      > div {

        a {
        }
      }
    }

    section#testimonials {

      > div {
        max-width: 700px;
        margin: 0 auto;
      }

      .testimonial-slider {
        margin: 0;
      }

      blockquote {

      }

      blockquote > span {
        position: relative;
        left: 70%;
      }
    }
  }
}


/* Medium Devices, Desktops */
@media only screen and (min-width : 992px) {
  .mobile-only {
    display: none;
  }

  h2 {
    font-size: 2.2rem;
    text-align: justify;
    margin-bottom: .75rem;
  }

  h3 {
    margin-bottom: .5rem;
  }

  h3 + p {
    margin-top: 0;
  }

  h2, h3, h4 {
    max-width: unset;
    margin-left: 0;
    margin-right: 0;
  }

  p {
    max-width: unset;
    margin-left: 0;
    margin-right: 0;
  }

  body{
    >div#ss-banner-container {

      max-height: 70vh;

      // Banner CTA
      >a {
        font-size: 2.2rem;
      }
    }

    section {
      border-bottom: none;
    }

    >main {
      flex-direction: row;
      margin: 1.5rem 0 0;
      position: relative;

      &:after {
        position: absolute;
        left: 0;
        top: 0;
        right: 0;
        bottom: 0;
        content: '';
        background-image: url("../images/grass-bg-01.jpeg");
        background-position: left bottom;
        background-position-y: 200px;
        background-size: cover;
        background-repeat: no-repeat;
        opacity: 0.8;
        z-index: -1;
      }


      >section#about {
        width: 37.5%;
        padding: 2rem 2rem 3rem;
        margin-right: 2.5%;

        >h2 {

          >span {

          }
        }

        >p {

        }

        >ul {
          max-width: 700px;
          margin-left: auto;
          margin-right: auto;
        }
      }

      >section#services {
        width: 60%;
        padding: 2rem 2rem 3rem;

        >h2 {
          border-bottom: 2px solid $dark-gray;
        }

        >h2 + p {
          text-align: justify;
        }

        >div.service-block {

        }
      }
    }

    >section#instafeed-section {

      >small {
        text-align: justify;

        &:first-of-type:before {
          content: 'Click';
        }

        &:last-of-type:before {
          content: '<- Scroll ->';
        }
      }

      >div {

        a {
        }
      }
    }

    section#testimonials {
      padding: 2rem 2rem 3rem;
      box-sizing: border-box;

      >div#slick-slideshow-testimonials {
        display: flex;
        justify-content: space-between;
        max-width: none;
        width: 100%;
        margin: 0;

        >blockquote {
          flex: 1;
          padding: 0 1rem;
          box-sizing: border-box;

          &:first-of-type {
            padding-left: 0;
          }

          &:last-of-type {
            padding-right: 0;
          }
        }
      }
    }

    section#contact {

      padding: 2rem 2rem 3rem;
      box-sizing: border-box;

      // Flex container
      >div {
        display: flex;

        >form {
          width: 60%;

          >div.form-group {

            &:nth-of-type(4) {
              display: flex;
              flex-direction: row;
              justify-content: flex-end;
            }

            >button {
              width: 175px;
            }
          }
        }

        // Social links
        >div {
          width: 40%;
          padding-left: 3rem;

          h3 {
            font-size: 2.3rem;
            margin-bottom: .75rem;
          }

          ul {
            list-style: none;
            padding: 0;
            margin: 0;

            li {
              margin-bottom: 2rem;

              &:first-of-type {
                margin-top: 25px;
              }
            }

            li>a {
              display: flex;
              align-items: center;
              color: $dark-gray;
              text-decoration: none;

              >span {
                margin-left: 1rem;
              }
            }

            li>a>img {
              width: 100px;
            }
          }
        }
      }
    }
  }
}

/* Large Devices, Wide Screens */
@media only screen and (min-width : 1200px) {

}

@media only screen and (min-width : 1440px) {

}

